--- a/ClassRosterApp/Base.lproj/Main.storyboard
+++ b/ClassRosterApp/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="ClassRosterApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +15,106 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Chn-yH-4M3">
+                                <rect key="frame" x="241" y="364" width="118" height="30"/>
+                                <color key="backgroundColor" red="0.81764914772727271" green="0.15999811881160705" blue="0.18049295096016643" alpha="0.96999999999999997" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="118" id="1Tr-ri-H2S"/>
+                                    <constraint firstAttribute="height" constant="30" id="l7r-Wi-3Bk"/>
+                                </constraints>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="nextButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="sOo-AN-YJZ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Student Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZb-zI-H5E">
+                                <rect key="frame" x="0.0" y="416" width="600" height="99"/>
+                                <color key="backgroundColor" red="0.80233980429292928" green="0.80233980429292928" blue="0.80233980429292928" alpha="0.35999999999999999" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="99" id="mud-IB-LuC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Foundations II Class Roster" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cai-O1-gaf">
+                                <rect key="frame" x="158" y="94" width="284" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="NBW-iY-9hH"/>
+                                    <constraint firstAttribute="width" constant="284" id="hve-sr-hSq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="czo-5S-hWk">
+                                <rect key="frame" x="241" y="538" width="118" height="30"/>
+                                <color key="backgroundColor" red="0.81764914772727271" green="0.15999811881160705" blue="0.18049295096016643" alpha="0.96999999999999997" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="kl8-gh-nhI"/>
+                                </constraints>
+                                <state key="normal" title="Previous">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="previousButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="3nI-aG-hIa"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="ciz-CV-Xke">
+                                <rect key="frame" x="240" y="167" width="120" height="133"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="GU9-B8-77w"/>
+                                    <constraint firstAttribute="height" constant="133" id="a6W-Lk-IoR"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code Fellows" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kBC-0P-7ho">
+                                <rect key="frame" x="178" y="40" width="244" height="49"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="41"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="czo-5S-hWk" secondAttribute="bottom" constant="32" id="1FS-L1-mEE"/>
+                            <constraint firstItem="Chn-yH-4M3" firstAttribute="leading" secondItem="czo-5S-hWk" secondAttribute="leading" id="2BQ-kG-hVg"/>
+                            <constraint firstAttribute="centerX" secondItem="kBC-0P-7ho" secondAttribute="centerX" id="3Le-ej-AmW"/>
+                            <constraint firstItem="ciz-CV-Xke" firstAttribute="centerX" secondItem="cai-O1-gaf" secondAttribute="centerX" id="JJm-Tb-YpQ"/>
+                            <constraint firstItem="kBC-0P-7ho" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="20" id="Ljt-N8-8Sk"/>
+                            <constraint firstItem="czo-5S-hWk" firstAttribute="top" secondItem="tZb-zI-H5E" secondAttribute="bottom" constant="23" id="Ov0-jy-gEu"/>
+                            <constraint firstItem="tZb-zI-H5E" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="ajk-oP-WyD"/>
+                            <constraint firstItem="tZb-zI-H5E" firstAttribute="top" secondItem="Chn-yH-4M3" secondAttribute="bottom" constant="22" id="cou-de-xGN"/>
+                            <constraint firstItem="czo-5S-hWk" firstAttribute="trailing" secondItem="Chn-yH-4M3" secondAttribute="trailing" id="eWX-12-k8N"/>
+                            <constraint firstItem="ciz-CV-Xke" firstAttribute="top" secondItem="cai-O1-gaf" secondAttribute="bottom" constant="43" id="haP-BB-SCh"/>
+                            <constraint firstItem="Chn-yH-4M3" firstAttribute="centerX" secondItem="tZb-zI-H5E" secondAttribute="centerX" id="o3e-uv-BhG"/>
+                            <constraint firstAttribute="trailing" secondItem="tZb-zI-H5E" secondAttribute="trailing" id="pQ0-lR-Xpi"/>
+                            <constraint firstItem="Chn-yH-4M3" firstAttribute="top" secondItem="ciz-CV-Xke" secondAttribute="bottom" constant="64" id="t0J-gI-hjr"/>
+                            <constraint firstItem="ciz-CV-Xke" firstAttribute="centerX" secondItem="Chn-yH-4M3" secondAttribute="centerX" id="yIQ-5w-3E1"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="studentNameLabel" destination="tZb-zI-H5E" id="Pe8-sT-lqL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo.jpeg" width="165" height="180"/>
+    </resources>
 </document>
