--- a/ClassRosterApp/Base.lproj/Main.storyboard
+++ b/ClassRosterApp/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bmz-b0-Pik">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,105 +17,105 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Chn-yH-4M3">
-                                <rect key="frame" x="241" y="364" width="118" height="30"/>
-                                <color key="backgroundColor" red="0.81764914772727271" green="0.15999811881160705" blue="0.18049295096016643" alpha="0.96999999999999997" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="118" id="1Tr-ri-H2S"/>
-                                    <constraint firstAttribute="height" constant="30" id="l7r-Wi-3Bk"/>
-                                </constraints>
-                                <state key="normal" title="Next">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="10"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="nextButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="sOo-AN-YJZ"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Student Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZb-zI-H5E">
-                                <rect key="frame" x="0.0" y="416" width="600" height="99"/>
-                                <color key="backgroundColor" red="0.80233980429292928" green="0.80233980429292928" blue="0.80233980429292928" alpha="0.35999999999999999" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="99" id="mud-IB-LuC"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Foundations II Class Roster" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cai-O1-gaf">
-                                <rect key="frame" x="158" y="94" width="284" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="NBW-iY-9hH"/>
-                                    <constraint firstAttribute="width" constant="284" id="hve-sr-hSq"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="czo-5S-hWk">
-                                <rect key="frame" x="241" y="538" width="118" height="30"/>
-                                <color key="backgroundColor" red="0.81764914772727271" green="0.15999811881160705" blue="0.18049295096016643" alpha="0.96999999999999997" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="kl8-gh-nhI"/>
-                                </constraints>
-                                <state key="normal" title="Previous">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="10"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="previousButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="3nI-aG-hIa"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="ciz-CV-Xke">
-                                <rect key="frame" x="240" y="167" width="120" height="133"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="GU9-B8-77w"/>
-                                    <constraint firstAttribute="height" constant="133" id="a6W-Lk-IoR"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code Fellows" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kBC-0P-7ho">
-                                <rect key="frame" x="178" y="40" width="244" height="49"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="41"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="tnc-Oz-Hp1">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="Bnt-JV-ULK">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Bnt-JV-ULK" id="SR8-14-bPf">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Eyw-Mo-bcS" kind="show" identifier="ShowDetailViewController" id="0aJ-vG-PPl"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="czo-5S-hWk" secondAttribute="bottom" constant="32" id="1FS-L1-mEE"/>
-                            <constraint firstItem="Chn-yH-4M3" firstAttribute="leading" secondItem="czo-5S-hWk" secondAttribute="leading" id="2BQ-kG-hVg"/>
-                            <constraint firstAttribute="centerX" secondItem="kBC-0P-7ho" secondAttribute="centerX" id="3Le-ej-AmW"/>
-                            <constraint firstItem="ciz-CV-Xke" firstAttribute="centerX" secondItem="cai-O1-gaf" secondAttribute="centerX" id="JJm-Tb-YpQ"/>
-                            <constraint firstItem="kBC-0P-7ho" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="20" id="Ljt-N8-8Sk"/>
-                            <constraint firstItem="czo-5S-hWk" firstAttribute="top" secondItem="tZb-zI-H5E" secondAttribute="bottom" constant="23" id="Ov0-jy-gEu"/>
-                            <constraint firstItem="tZb-zI-H5E" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="ajk-oP-WyD"/>
-                            <constraint firstItem="tZb-zI-H5E" firstAttribute="top" secondItem="Chn-yH-4M3" secondAttribute="bottom" constant="22" id="cou-de-xGN"/>
-                            <constraint firstItem="czo-5S-hWk" firstAttribute="trailing" secondItem="Chn-yH-4M3" secondAttribute="trailing" id="eWX-12-k8N"/>
-                            <constraint firstItem="ciz-CV-Xke" firstAttribute="top" secondItem="cai-O1-gaf" secondAttribute="bottom" constant="43" id="haP-BB-SCh"/>
-                            <constraint firstItem="Chn-yH-4M3" firstAttribute="centerX" secondItem="tZb-zI-H5E" secondAttribute="centerX" id="o3e-uv-BhG"/>
-                            <constraint firstAttribute="trailing" secondItem="tZb-zI-H5E" secondAttribute="trailing" id="pQ0-lR-Xpi"/>
-                            <constraint firstItem="Chn-yH-4M3" firstAttribute="top" secondItem="ciz-CV-Xke" secondAttribute="bottom" constant="64" id="t0J-gI-hjr"/>
-                            <constraint firstItem="ciz-CV-Xke" firstAttribute="centerX" secondItem="Chn-yH-4M3" secondAttribute="centerX" id="yIQ-5w-3E1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tnc-Oz-Hp1" secondAttribute="trailing" constant="-16" id="NZy-Rc-nC4"/>
+                            <constraint firstItem="tnc-Oz-Hp1" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="Nex-E7-msl"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="tnc-Oz-Hp1" secondAttribute="bottom" id="ZX6-WY-C0Z"/>
+                            <constraint firstItem="tnc-Oz-Hp1" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="o5e-1L-2mF"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="cMH-ag-ZHw"/>
                     <connections>
-                        <outlet property="studentNameLabel" destination="tZb-zI-H5E" id="Pe8-sT-lqL"/>
+                        <outlet property="tableView" destination="tnc-Oz-Hp1" id="659-5A-LeT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1137" y="350"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="oPb-Qc-7gm">
+            <objects>
+                <viewController id="Eyw-Mo-bcS" customClass="DetailViewController" customModule="ClassRosterApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iKp-Qv-dfj"/>
+                        <viewControllerLayoutGuide type="bottom" id="9FI-B9-o7W"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eF1-ot-Dc7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIj-nS-Ve7">
+                                <rect key="frame" x="279" y="289" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FgD-X5-OFF">
+                                <rect key="frame" x="279" y="345" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="qIj-nS-Ve7" secondAttribute="centerX" id="3sE-LQ-GN2"/>
+                            <constraint firstAttribute="centerX" secondItem="FgD-X5-OFF" secondAttribute="centerX" id="QGB-Lm-OtC"/>
+                            <constraint firstItem="FgD-X5-OFF" firstAttribute="centerX" secondItem="qIj-nS-Ve7" secondAttribute="centerX" id="QZp-Qg-VNn"/>
+                            <constraint firstItem="FgD-X5-OFF" firstAttribute="top" secondItem="qIj-nS-Ve7" secondAttribute="bottom" constant="35" id="cde-CF-JcA"/>
+                            <constraint firstAttribute="centerY" secondItem="qIj-nS-Ve7" secondAttribute="centerY" id="loe-o7-lOe"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="QGB-Lm-OtC"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="studentLastNameLabel" destination="FgD-X5-OFF" id="xCz-NI-LOC"/>
+                        <outlet property="studentNameLabel" destination="qIj-nS-Ve7" id="hdW-KU-uvz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7r0-bN-Oaw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1940" y="350"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8Yx-eU-Tj3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bmz-b0-Pik" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DZ9-ZX-lU3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="RCc-AC-vh6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="05X-aj-ilG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="341" y="350"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="logo.jpeg" width="165" height="180"/>
-    </resources>
 </document>
